--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "astro": "^4.2.1",
+    "pnpm": "^8.14.1",
     "typescript": "^5.3.3"
   }
 }
