--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.2.1",
     "pnpm": "^8.14.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
