--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "pnpm": "^8.14.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^1.0.1"
   }
 }
